Deactivate excl checker for now; fix remaining problems from updating CF