@@ -28,13 +28,15 @@ ext.versions = [
 ]
 
 
-sourceCompatibility = 17
+sourceCompatibility = 11
 def checkerframework_local = true  // Set this variable to [true] while using local version of checker framework.
 
 dependencies {
     // This dependency is found on compile classpath of this component and consumers.
     if (checkerframework_local) {
         implementation files('checker-framework/dist/checker-3.39.0-eisop2-SNAPSHOT.jar')
+        implementation files('checker-framework/dist/checker-qual-3.39.0-eisop2-SNAPSHOT.jar')
+        implementation files('checker-framework/dist/framework-3.39.0-eisop2-SNAPSHOT.jar')
         
     }
     else {
@@ -44,6 +46,7 @@ dependencies {
   	implementation "com.google.guava:guava:30.1-jre"
   	implementation "org.apache.commons:commons-lang3:3.11"
   	implementation "org.apache.commons:commons-io:1.3.2"
+    implementation 'org.plumelib:plume-util:1.8.1'
     compileOnly "com.google.errorprone:javac:9+181-r4173-1"
 
     // Testing
@@ -67,9 +70,9 @@ tasks.withType(JavaCompile).all {
 publishing {
     publications {
         maven(MavenPublication) {
-            groupId = 'edu.kit.iti'
+            groupId = 'edu.kit.kastel'
             artifactId = 'property-checker'
-            version = '1.0.2'
+            version = '2.0.0'
 
             from components.java
         }
@@ -101,6 +104,30 @@ test {
     if (!JavaVersion.current().java9Compatible) {
         jvmArgs "-Xbootclasspath/p:${configurations.errorproneJavac.asPath}"
     }
+    jvmArgs += [
+            // These are required in Java 16+ because the --illegal-access option is set to deny
+            // by default.  None of these packages are accessed via reflection, so the module
+            // only needs to be exported, but not opened.
+            '--add-exports',
+            'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+            '--add-exports',
+            'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-exports',
+            'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+            '--add-exports',
+            'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+            '--add-exports',
+            'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+            '--add-exports',
+            'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+            '--add-exports',
+            'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            '--add-exports',
+            'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+            // Required because the Checker Framework reflectively accesses private members in com.sun.tools.javac.comp.
+            '--add-opens',
+            'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+    ]
     testLogging.showStandardStreams = true
 }
 
